[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sam-sdk"
version = "0.1.0"
description = "Typed Python client for the SAM (Shopping Agent Model) API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SnapCart AI", email = "team@snapcart.cc" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
